# thanatos

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
src/: lib.rs  main.rs
src/geometry/: base.rs  brick.rs  circle.rs  deserialize.rs  difference.rs  linear_extrusion.rs  mod.rs  point.rs  rectangle.rs  sphere.rs  translation.rs  union.rs
src/geometry/affine/: mod.rs  rotation.rs  translation.rs
src/geometry/booleans/: difference.rs  intersection.rs  mod.rs  union_op.rs
src/geometry/primitives/: mod.rs
src/geometry/primitives/three_dimensions/: ellipsoid.rs  gyroid.rs  mod.rs  sphere.rs  torus.rs
src/geometry/primitives/two_dimensions/: circle.rs  rectangle.rs
src/mesh/: enums.rs  mod.rs  stl.rs
tests/: circle.rs  difference.rs  mesh.rs  rectangle.rs  rotation.rs  sphere.rs  translation.rs
