[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "CSG geometries in rust"
repository = "https://github.com/cmhamel/thanatos"
homepage = "https://github.com/cmhamel/thanatos"
keywords = ["graphics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"
bbox = "0.14.1"
byteorder = "1.5.0"
min-max = "0.1.8"
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
pyo3 = "0.22.0"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
